; ModuleID = '/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_arch_sem_wait.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/lwip/port/esp32/freertos/extr_sys_arch.c_sys_arch_sem_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@portMAX_DELAY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"taking semaphore failed\00", align 1
@pdTRUE = common dso_local global i64 0, align 8
@portTICK_RATE_MS = common dso_local global i32 0, align 4
@errQUEUE_EMPTY = common dso_local global i64 0, align 8
@SYS_ARCH_TIMEOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_arch_sem_wait(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %20, label %10

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @portMAX_DELAY, align 4
  %14 = call i64 @xSemaphoreTake(i32 %12, i32 %13)
  store i64 %14, i64* %6, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i64, i64* @pdTRUE, align 8
  %17 = icmp eq i64 %15, %16
  %18 = zext i1 %17 to i32
  %19 = call i32 @LWIP_ASSERT(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %39

20:                                               ; preds = %2
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @portTICK_RATE_MS, align 4
  %23 = sdiv i32 %21, %22
  store i32 %23, i32* %7, align 4
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %7, align 4
  %27 = call i64 @xSemaphoreTake(i32 %25, i32 %26)
  store i64 %27, i64* %6, align 8
  %28 = load i64, i64* %6, align 8
  %29 = load i64, i64* @errQUEUE_EMPTY, align 8
  %30 = icmp eq i64 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %20
  %32 = load i32, i32* @SYS_ARCH_TIMEOUT, align 4
  store i32 %32, i32* %3, align 4
  br label %40

33:                                               ; preds = %20
  %34 = load i64, i64* %6, align 8
  %35 = load i64, i64* @pdTRUE, align 8
  %36 = icmp eq i64 %34, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @LWIP_ASSERT(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %37)
  br label %39

39:                                               ; preds = %33, %10
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %39, %31
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i64 @xSemaphoreTake(i32, i32) #1

declare dso_local i32 @LWIP_ASSERT(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
